Preparing for 1.0.5 release
git-svn-id: https://plugins.svn.wordpress.org/siteguard/trunk@1018070 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/languages/siteguard-ja.po
+++ b/languages/siteguard-ja.po
@@ -42,6 +42,23 @@ msgstr "この機能を、プラグイン \""
 msgid "\" cannot be used at the same time."
 msgstr "\" と同時に使用することはできません。"
 
+msgid "Login page URL was changed."
+msgstr ""
+"ログインページURLが変更されました。"
+
+msgid " Please bookmark "
+msgstr "　"
+
+msgid "new login URL"
+msgstr "新しいログインページURL"
+
+msgid ". Setting change is "
+msgstr ""
+"をブックマークしてください. 設定変更は"
+
+msgid "here"
+msgstr "こちら"
+
 #: admin/siteguard-menu-admin-filter.php:42
 #: admin/siteguard-menu-captcha.php:38
 #: admin/siteguard-menu-disable-pingback.php:17
