Preparing for 1.0.6 release
git-svn-id: https://plugins.svn.wordpress.org/siteguard/trunk@1021863 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/languages/siteguard-ja.po
+++ b/languages/siteguard-ja.po
@@ -336,6 +336,10 @@ msgid ""
 msgstr ""
 "英数字、ハイフン、アンダーバーが使用できます。"
 
+msgid " can not be used for New Login Path."
+msgstr ""
+"は、変更後のログインページ名に指定できません。"
+
 #: admin/siteguard-menu-rename-login.php:57
 msgid ""
 "It is the function to decrease the vulnerability against an illegal login "
