--- a/languages/siteguard.pot
+++ b/languages/siteguard.pot
@@ -2,9 +2,9 @@
 # This file is distributed under the same license as the SiteGuard WP Plugin package.
 msgid ""
 msgstr ""
-"Project-Id-Version: SiteGuard WP Plugin 1.1.0\n"
+"Project-Id-Version: SiteGuard WP Plugin 1.1.1\n"
 "Report-Msgid-Bugs-To: http://wordpress.org/tag/siteguard\n"
-"POT-Creation-Date: 2014-11-14 02:54:50+00:00\n"
+"POT-Creation-Date: 2014-12-17 02:35:22+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -39,7 +39,7 @@ msgstr ""
 #: admin/siteguard-menu-captcha.php:44
 #: admin/siteguard-menu-disable-pingback.php:16
 #: admin/siteguard-menu-fail-once.php:19
-#: admin/siteguard-menu-login-alert.php:33
+#: admin/siteguard-menu-login-alert.php:23
 #: admin/siteguard-menu-login-lock.php:44
 #: admin/siteguard-menu-rename-login.php:29
 #: admin/siteguard-menu-same-error.php:26
@@ -54,7 +54,7 @@ msgstr ""
 #: admin/siteguard-menu-captcha.php:61
 #: admin/siteguard-menu-disable-pingback.php:25
 #: admin/siteguard-menu-fail-once.php:34
-#: admin/siteguard-menu-login-alert.php:52
+#: admin/siteguard-menu-login-alert.php:42
 #: admin/siteguard-menu-login-lock.php:59
 #: admin/siteguard-menu-rename-login.php:74
 #: admin/siteguard-menu-same-error.php:35
@@ -70,7 +70,7 @@ msgstr ""
 #: admin/siteguard-menu-captcha.php:73
 #: admin/siteguard-menu-disable-pingback.php:38
 #: admin/siteguard-menu-fail-once.php:46
-#: admin/siteguard-menu-login-alert.php:64
+#: admin/siteguard-menu-login-alert.php:54
 #: admin/siteguard-menu-login-lock.php:71
 #: admin/siteguard-menu-rename-login.php:86
 #: admin/siteguard-menu-same-error.php:47
@@ -82,7 +82,7 @@ msgstr ""
 #: admin/siteguard-menu-captcha.php:78
 #: admin/siteguard-menu-disable-pingback.php:43
 #: admin/siteguard-menu-fail-once.php:51
-#: admin/siteguard-menu-login-alert.php:69
+#: admin/siteguard-menu-login-alert.php:59
 #: admin/siteguard-menu-login-lock.php:76
 #: admin/siteguard-menu-rename-login.php:91
 #: admin/siteguard-menu-same-error.php:52
@@ -94,7 +94,7 @@ msgstr ""
 #: admin/siteguard-menu-captcha.php:81
 #: admin/siteguard-menu-disable-pingback.php:46
 #: admin/siteguard-menu-fail-once.php:54
-#: admin/siteguard-menu-login-alert.php:72
+#: admin/siteguard-menu-login-alert.php:62
 #: admin/siteguard-menu-login-lock.php:79
 #: admin/siteguard-menu-rename-login.php:94
 #: admin/siteguard-menu-same-error.php:55
@@ -177,7 +177,7 @@ msgid ""
 "Plugin on "
 msgstr ""
 
-#. #-#-#-#-#  siteguard.pot (SiteGuard WP Plugin 1.1.0)  #-#-#-#-#
+#. #-#-#-#-#  siteguard.pot (SiteGuard WP Plugin 1.1.1)  #-#-#-#-#
 #. Plugin URI of the plugin/theme
 #: admin/siteguard-menu-dashboard.php:29
 msgid ""
@@ -238,7 +238,7 @@ msgid ""
 msgstr ""
 
 #: admin/siteguard-menu-dashboard.php:61 admin/siteguard-menu-init.php:21
-#: admin/siteguard-menu-login-alert.php:59
+#: admin/siteguard-menu-login-alert.php:49
 msgid "Login Alert"
 msgstr ""
 
@@ -287,7 +287,7 @@ msgid "Target user"
 msgstr ""
 
 #: admin/siteguard-menu-fail-once.php:63
-#: admin/siteguard-menu-login-alert.php:90
+#: admin/siteguard-menu-login-alert.php:80
 msgid "Admin only"
 msgstr ""
 
@@ -304,25 +304,26 @@ msgstr ""
 msgid "SiteGuard"
 msgstr ""
 
-#: admin/siteguard-menu-login-alert.php:77
+#: admin/siteguard-menu-login-alert.php:67
 msgid "Subject"
 msgstr ""
 
-#: admin/siteguard-menu-login-alert.php:82
+#: admin/siteguard-menu-login-alert.php:72
 msgid "Body"
 msgstr ""
 
-#: admin/siteguard-menu-login-alert.php:87
+#: admin/siteguard-menu-login-alert.php:77
 msgid "Recipients"
 msgstr ""
 
-#: admin/siteguard-menu-login-alert.php:96
+#: admin/siteguard-menu-login-alert.php:86
 msgid ""
 "It is the function to make it easier to notice unauthorized login. E-mail "
-"will be sent to each to login. If you receive an e-mail to there is no "
-"logged-in idea, please suspect unauthorized login. The subject and the mail "
-"body, the following variables can be used. (Site Name:%SITENAME%, User Name:"
-"%USERNAME%, DATE:%DATE%, Time:%TIME%)"
+"will be sent to a login user when logged in. If you receive an e-mail to "
+"there is no logged-in idea, please suspect unauthorized login. The subject "
+"and the mail body, the following variables can be used. (Site Name:%SITENAME"
+"%, User Name:%USERNAME%, DATE:%DATE%, Time:%TIME%, IP Address:%IPADDRESS%, "
+"User-Agent:%USERAGENT%, Referer:%REFERER%)"
 msgstr ""
 
 #: admin/siteguard-menu-login-lock.php:84
@@ -586,6 +587,11 @@ msgstr ""
 #: classes/siteguard-login-alert.php:15
 msgid ""
 "%USERNAME% logged in at %DATE% %TIME%\n"
+"\n"
+"== Login information ==\n"
+"IP Address: %IPADDRESS%\n"
+"Referer: %REFERER%\n"
+"User-Agent: %USERAGENT%\n"
 "\n"
 "--\n"
 "SiteGuard WP Plugin"
